# ChangeLog for dev-haskell/warp-tls
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-haskell/warp-tls/ChangeLog,v 1.5 2014/12/22 11:56:36 gienah Exp $

*warp-tls-3.0.1.1 (22 Dec 2014)

  22 Dec 2014; Mark Wright <gienah@gentoo.org> +warp-tls-3.0.1.1.ebuild:
  Bump warp-tls to 3.0.1.1

  25 Jul 2014; Sergei Trofimovich <slyfox@gentoo.org> metadata.xml:
  Drop redundant '<maintainer>' field, leave only '<herd>'.

*warp-tls-3.0.0 (02 Jul 2014)

  02 Jul 2014; Mark Wright <gienah@gentoo.org> +warp-tls-3.0.0.ebuild:
  Bump warp-tls to 3.0.0

*warp-tls-2.0.3.1 (09 Mar 2014)

  09 Mar 2014; Mark Wright <gienah@gentoo.org> +warp-tls-2.0.3.1.ebuild:
  Bump warp-tls to 2.0.3.1

*warp-tls-2.0.0 (11 Dec 2013)

  11 Dec 2013; Mark Wright <gienah@gentoo.org> +metadata.xml,
  +warp-tls-2.0.0.ebuild:
  Add warp-tls-2.0.0