@@ -1,4 +1,4 @@
 DIST cssparser-0.9.14-sources.jar 234339 SHA256 0a41f330da911f31d4911d2745d83ecc37a131c41e99a052f131fdaf585addce SHA512 e7f9ec1bfff774d75c367c1dfcaf2b10550755900071cd6a5a64d9453b789779e0bfa6bcbdba48a679604621ee1ffb32eece774dc219d614a52e5c484256feae WHIRLPOOL 3d23c0d1873725699f2c5031aa13c30b1954c3079bd18826f0f868bc3ca78ff9be4203168778a9fd7dba0b005b29c03311404175617c621e0d0c787bbef827bd
-EBUILD cssparser-0.9.14.ebuild 613 SHA256 cf1221ca840cfee982482c58c1150db9598652d3566334a9cc8f40b9f75ba9fd SHA512 a960c8a6bafbf4c5287d2df12f16a8a2365819b318b7c99b11490dd9e5bd2f8f79adcb8448f57424d4c569ad907b3aff33b35c5f65a40396377cc2770013622a WHIRLPOOL f48695548c8871ba170752248d6e6500ac719a6e2729af220ed487efa630baf77cbcd32c6a25be5e29548701a69c0819f3ea76bc519efa7ffc6551952b101bd4
-MISC ChangeLog 299 SHA256 a214f97b68b57fcc8b7a42705ddecc09cd94c903250fd5057d70a91e43ef791e SHA512 d83b6732aab728b415d7d338c7a4d805853042a576b3bdad0bc3dcba388394d38ee0fd92d21b7d8a18a17e266c7de5ce6cb1826ad7ab427867633da7d0c0d318 WHIRLPOOL 508051d6f633978d2f9ae87208c40159b93a488d66efc4965c829af5ef054964e85601ed752a6f18ccd9289aa9808e5ae35810cd40cf4b9702d2f58e84b75e45
-MISC metadata.xml 159 SHA256 1c070a909e96d9d193f84ad9304d196febbe33b60a724cc4b0d20634bb82255b SHA512 269cf19c37f2d136b926f546ec83ffdbc1374b2b6e26f8a31f21854143380386c31bfc7b2a0b9c47fb1f7c02607ddbdd43e517cb5c3270515e465c4dd7788843 WHIRLPOOL afb402fec04cddb3184b69eb8a8d36b404edd2870fd06c8f5e99be39c341ea6fa7542e0b680fac05529522ed33838e8279381d7a6de9dbc58fe55841229d8a51
+EBUILD cssparser-0.9.14.ebuild 612 SHA256 abb61686a38abad61d59cd17dc0975d90a9e954e1cb69c417988d92ae3ab3df8 SHA512 7f0834226d072a70655512c433fc2ae1c262b4c7e89ed6e495e206bb2e4bb967c1bf6a9e6b6a6aaf541e9b693623bd95090465e830ccb52f081238fb033c6581 WHIRLPOOL 802b937fd9889cab61f81fa6e0b8c06c7fc4c81aa769e9b3338a9acaf38c62b2df5ccc5ced8520b452bb772ff39beea91cd46ca4b6f0c5a52dacf2190c6378f2
+MISC ChangeLog 422 SHA256 b7eb3f97cc594bc60d039eda1935a89c7a2ae970c0f203e4275e8897b6924887 SHA512 46c96d6d341fa9b314cf7306b97e800389b9e1214466815e695aae374fdaf8554af6a3a1f7f22d86eed00d8a9d7f40ee60a0fc815fc4fb608650c9ab686c2529 WHIRLPOOL 30777fbf2ff4a52d13391074dc2e0c2ffccacb84b71da27ece777a8067af0e6e74a39dada8ef30f1222a78fdb62c848d4ca519d6dc2f79ac183826502795ee98
+MISC metadata.xml 226 SHA256 c0f7450a3293e5d1b024fd79b3dfde90711acbe89233eac187bbf375e8551d09 SHA512 fc467104cfd4fe89bf880db9eb46daa0a9a4e0a0d8d3dfb9263a47016883cd294f026ae3e43318491aacc63447f930a8df147176e40813c1feb8c740a316f9be WHIRLPOOL 7573504f99d46cab7ad320ccafd60ed174e13f4fbaefe79f23fb26f80cc4f492e0e0f6f004d60af70275d66827ccf2dbed127340c6a89728b978a7afe0fc08c7
