@@ -4,27 +4,17 @@ Hash: SHA256
 DIST re2c-0.13.5.tar.gz 782725 SHA256 f3a995139af475e80a30207d02728b1e0065b0caade7375e974cb1b14861668c SHA512 56101bf01aea6f0c082b85382be34acada51d70036252581cd76ac4b2bdbc144633b97c63a94bfdba434ffb80884e11299a38853e2d805dc7ce6cf9d452c81c8 WHIRLPOOL 31e462704e3ab72fce92b62ce0bca73b256c98e48f302f6f90392c26a7235e86786f2bc5f43faedbaa60f9614098ac5d734a61abed394cd71135dd3639704210
 DIST re2c-0.13.6.tar.gz 844623 SHA256 8e463039aa8799a2957bfc00c9936232bb63b4fcb24d6ea6316170a67e5076c0 SHA512 dca2654de5f596fbaf519396b2f2c58690996c62dec32436599332b79107b5bf07c87b46630a224032ff44dc02d2c1861e16a920fbdc9251f4a538008709ceba WHIRLPOOL af810c4d8e41eb01cb4b06c86932fda6da86d1690a17cd626f3a864087a378cf685a9ae6ab170cb7581c696e08ca4474f128b51bff1d1284f2a9d2252d60f226
 DIST re2c-0.13.7.5.tar.gz 2347921 SHA256 d58afd50579e4564c9fc4218aec860d41b88583ace2ae0a23497b49108f1b461 SHA512 71abaec58ac02de6f13cfffec6965d3443c44a72425c4ce8873915daddf077f7f484c2dc702e6533bab2d2f0ca72b34e354771120a4788d9a456b3b3393b6e22 WHIRLPOOL 1d5f8b4822c04d7e84d79601194568810f4b4053ca55386fc7d216bdaf402ab0282994c823ba5001e558d40f78aa9f7b4ee704b43015046d4ccdb8d6118fde0e
-DIST re2c-0.14.tar.gz 2554464 SHA256 b5cb4ec11bf55253171e009a76323bac11a4e373f6bcf5af3570d63e07603889 SHA512 3a9dcd9c70b7e71c764414d7bb691dd36231ed777cf9256ae0c47d8401868011d62003b965c1a52d834b9401f8b21bf84eeda768e74e32536a626bf7c33f66fa WHIRLPOOL ea0e65b9ea185d3c27fbfe697b8b9bdb8c22342728fc646949264c2e4c3b2e58a9f28590965fee69146fa7861b90ec205610c180ab771eba717efb4ea99fe57a
+DIST re2c-0.14.1.tar.gz 2554493 SHA256 9b3572f04712e99236bbb191695a5acbe150c03f9d882a84d22459933f9fda75 SHA512 e02f713d055a27d6efe0e73f437fe66ca27d3fdce3bb675fd1d2347a36c76a416cc824f67b463d5028b4d75456e596bda7863717fc10a3b19add49eb317fb2ec WHIRLPOOL eb4296edce5c5562e00ab10262b83f9e6afbbabd334de37610923407a92cbe747bd1ea780e7d7281e050de5ab18addec39b509906656658618d3260445dda821
 EBUILD re2c-0.13.5-r1.ebuild 836 SHA256 76bbd108209a6f3dd3549967f1b66fc547622c4db78d0e83079db34051239b52 SHA512 a4e922705c4afc152500260dae3276d6df6e0f4fc7f55a00fc718b956e81bbf3f644bb11e984d77c937e971589090f3a80485c9ff31650fe21fe0e6e1b95510f WHIRLPOOL 76839e251ed77b49ff3915f398c8332c1ea1da985dec0e91c952d985daaaa4e063d19a6dd41209f47ce37b60e114b2e7916b9c7e86b06e54a329f3781ba3203e
 EBUILD re2c-0.13.6.ebuild 723 SHA256 1da008a8b2e83fcd28be864b4b6bb7e51932eb9d8a0278be65bea2fcbc8d5b3e SHA512 2bdceeddf663575875c426ab0e38814af2881516c889804f3dfd8ec8f6299532f94dbe13839ed21e4097530818fdc7ff3a98c7cfcfa8bf6804d5deec930e0b10 WHIRLPOOL 592e0ff23e70fa61713a71a97af255a8397777b3c8dd7c4db132cf8c187287c799a3f142f634d8c150c637e2caf778d9776e2a87b00761a3fe1ba766c1a36529
 EBUILD re2c-0.13.7.5.ebuild 832 SHA256 5f8cb0521465d626fb8c347bc40c068ce951296b1b1d9e1ef9660aeabc0dade9 SHA512 ad4d0cacb475ea7403d7033cfbdb9aedcad2b0254dbb9878fadf61c8beeb35b084edf8442e31dead6bcd576977eea0d0e775e3a1df57f1e1b72f58ccdc8731b4 WHIRLPOOL 758e3adef2e6c600ac186351d238c974090f853004a5a6fe6e816c214fe1f4edf1038fb5348e1bfb1bcaefac9e373eccd4217dcbb63686209bda1938dd50d1f9
-EBUILD re2c-0.14.ebuild 764 SHA256 7d30753c01c6ba25410182aa5f327ae4dbb61cfdbd94398eb028ab8749558acd SHA512 4eda0b99b0926afe3b81000b397471577be8ce5356e4047b7f3e4125ca0a6afe30eb6ca441abddfbfe354313265855bcde6d9f7c7482549c3b28a769e38449f7 WHIRLPOOL e42d03adafe91063860f7085d177cbd4df74bc70971549af0596426f13014cbac347ece6cc597cb8403b59b07da37f2064426c277cc8bd71e9bf226bda1cc51a
-MISC ChangeLog 11309 SHA256 42ef82740453dff94ba5faf4b61620054187c4a967846ab7b6899f650898db34 SHA512 791dc4f7c138f34caad10a124f7ca392908b0c5a894af8db40605b1182df7899afaed757207eeaca2aae5cc9cf4947b37215dbe1495db1b755ebe53333fd2acd WHIRLPOOL d861c1b308b8a5bea2b770e9ea9fbc54714f45bd69b98650d9a96c54575f38bc92f24a333bc11a55e874069d261828115dd564ec09dad9d70328f66a3aab4c15
+EBUILD re2c-0.14.1.ebuild 766 SHA256 0d026274b7e85d283a3d1c5b2060469ff7173f6ab073a6ab976ad32d29421611 SHA512 ecdf53b0972b16de962b3f528a903806d8514dfc8478300462258b265664b936b01e0739a76e39c8059cd9620f1474b22708365de67b304f48c6e7987dd47251 WHIRLPOOL f095e6efefefc30707fc64cbb9771abf8feefb151434673172b14e445394b744243d1fee68e49c2fa5d7135f33fe3680f8ecd802518e9818851137b46b95b271
+MISC ChangeLog 11574 SHA256 d7c8e287d5066808c1fccc752e04b153e9d093c19e24e6b5bfbecaa69f2f3ed8 SHA512 ec90f8e43ade2244738130713fb27e43fc84b605b0087d0752ff0f34898bf51a2cc791608bfff35440847aa5d8fce1a4ca6f99639d4e3716a684505833baa575 WHIRLPOOL 94ad2ccc1f547d49e1cc591614f616871550cb706db6cea8ace9b0e6a3cb403ebbbd65d6d68b5548b6aa8307e9e5b6363b4a28dccd676e9d8d68aefc852bb6ab
 MISC metadata.xml 268 SHA256 944682856effe19afcd29fff31f4117d888a7ef137ce1b0bd16b46d8a61fe648 SHA512 a9913eac4e5a9224873838b17cb4144a03d69e56c63d5bcf8c6cc29b105378c171143ac4f4ed49cb86cbe212d757502de8b47797b7e945d4245f36fb8afcc406 WHIRLPOOL 29d89b87171cf31af86889e31caa071c3987ea55d67699af18973c553e5fdcd33273bc0d8c62f39e47b02673ed68717f938a75a5ccca1d4ba0fdf801ab00888b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJU8FPZAAoJELp701BxlEWf/yEP/24LF9wFNjQ7yEQPsyk6zQR9
-77+c4/vGpmbbdOizJ7XaakjDfmYBTkCE/AP65j0FvKT5/orkl4g05DtjWshh9XCS
-zkROMO3K1A2VENMMMm+/EoL2igJv7pdjHdrR5tbN5eMDpYT1EJWj4sCLJtOwMqei
-sw4JYo9H7ZQLZXYrcuTflVRIwvPEABdfTM33mKGi2KWZT14bhowymYKEIVVx8ABu
-Qo2zp6pWUJsHaPgcIR0uMTdliMuqzjb1iP9bZAV9ReoXAgXriLSibAhNo9dW4277
-SunMlNZtAYOa99BfkcAs84FUKp/Y/dvJ3pmAsC6xs/GNKvUMYpkuCjzqhaAdCzc3
-VemNpQrK9XpbZmfgCibicXK4H/gB6k6rMq6OXyvkvlLCCSmJRvFFGE5tGmkx87YV
-vmFNeDs5tCabuMZ36mhpuc5IHfdHBkVcLN0g5d2JZa+LWSYcz40xKfyxDw4/PSX3
-ZgY6hzH8Tzb3jMUzDEDW1NpGLrW0fjxf3ynR281I3QUo1iExTxso+NdFd+0heB14
-a3QXaui4oBbgdC6Us0lvSTSo9XMueteOdI+0u+qnlOTKGkhJq1d3uYJARHnEfyfg
-u2RPCt1LSO+2VdhH4KBbwnTKwx2qDZxvn2jZBLJgy2ZavNZKh9v8CNYMPOJCXo1F
-EVcujOaOtCZokW1dz602
-=mExS
+iEYEAREIAAYFAlTxBmQACgkQcaHudmEf86oldACfV12k++jSBilDCtgwESbVgyA5
+TnsAn1HEK74lNEFhl5UM4g4my7PQyPAu
+=NPw+
 -----END PGP SIGNATURE-----
