@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile configure install postinst postrm setup test
-DEPEND=>=dev-haskell/certificate-1.2:=[profile?] >=dev-haskell/conduit-0.5:=[profile?] <dev-haskell/conduit-1.1:=[profile?] >=dev-haskell/crypto-random-api-0.2:=[profile?] >=dev-haskell/cryptocipher-0.3:=[profile?] >=dev-haskell/network-2.2.1:=[profile?] >=dev-haskell/network-conduit-0.6:=[profile?] <dev-haskell/network-conduit-1.1:=[profile?] >=dev-haskell/pem-0.1:=[profile?] >=dev-haskell/tls-extra-0.6:=[profile?] >=dev-haskell/transformers-0.2:=[profile?] >=dev-haskell/wai-2.0:=[profile?] <dev-haskell/wai-2.1:=[profile?] >=dev-haskell/warp-2.0:=[profile?] <dev-haskell/warp-2.1:=[profile?] >=dev-lang/ghc-6.10.4:= >=dev-haskell/cprng-aes-0.5.0:=[profile?] >=dev-haskell/tls-1.1.3:=[profile?] >=dev-haskell/cabal-1.6.0.3 doc? ( dev-haskell/haddock ) hscolour? ( dev-haskell/hscolour ) >=dev-haskell/cabal-1.1.4
-DESCRIPTION=HTTP over SSL/TLS support for Warp via the TLS package
-EAPI=5
-HOMEPAGE=http://github.com/yesodweb/wai
-IUSE=doc hscolour profile
-KEYWORDS=~amd64 ~x86
-LICENSE=MIT
-RDEPEND=>=dev-haskell/certificate-1.2:=[profile?] >=dev-haskell/conduit-0.5:=[profile?] <dev-haskell/conduit-1.1:=[profile?] >=dev-haskell/crypto-random-api-0.2:=[profile?] >=dev-haskell/cryptocipher-0.3:=[profile?] >=dev-haskell/network-2.2.1:=[profile?] >=dev-haskell/network-conduit-0.6:=[profile?] <dev-haskell/network-conduit-1.1:=[profile?] >=dev-haskell/pem-0.1:=[profile?] >=dev-haskell/tls-extra-0.6:=[profile?] >=dev-haskell/transformers-0.2:=[profile?] >=dev-haskell/wai-2.0:=[profile?] <dev-haskell/wai-2.1:=[profile?] >=dev-haskell/warp-2.0:=[profile?] <dev-haskell/warp-2.1:=[profile?] >=dev-lang/ghc-6.10.4:= >=dev-haskell/cprng-aes-0.5.0:=[profile?] >=dev-haskell/tls-1.1.3:=[profile?]
-SLOT=0/2.0.0
-SRC_URI=mirror://hackage/packages/archive/warp-tls/2.0.0/warp-tls-2.0.0.tar.gz
-_eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	ghc-package	29f14cf665461bc19b8724d1842b0b3a	haskell-cabal	f398638b447d3821846f2e2abbc33c1b	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	toolchain-funcs	a3db8057ea0903a9ebea4e46aab28ff9	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=1e2286680cc071c7fd516250668d458d
