@@ -10,4 +10,4 @@ RDEPEND=>=virtual/jre-1.5 >=dev-java/sac-1.3 >=dev-java/java-config-2.1.9-r1
 SLOT=0
 SRC_URI=mirror://sourceforge/cssparser/cssparser-0.9.14-sources.jar
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	java-pkg-2	65bbb59987d777c1106ae8aa4bf36e7b	java-pkg-simple	d7cef87260947d4cce245c4f026377e2	java-utils-2	f02d3e4777b404c719a5a6479c37c6e3	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	a3db8057ea0903a9ebea4e46aab28ff9	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=8cb999aa2bb746559590d1112fdee789
+_md5_=577e3404d87987a5eec1ef41961c7b24
