@@ -5,6 +5,6 @@ HOMEPAGE=http://re2c.sourceforge.net/
 KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~x86-fbsd ~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~x86-solaris
 LICENSE=public-domain
 SLOT=0
-SRC_URI=mirror://sourceforge/re2c/re2c-0.14.tar.gz
+SRC_URI=mirror://sourceforge/re2c/re2c-0.14.1.tar.gz
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	a3db8057ea0903a9ebea4e46aab28ff9
-_md5_=5349b6631fba7e2de98c31b73e25ca73
+_md5_=a0b42a357c55a0b00afd9b6859bba7e9
